# 0.5.1-household-backend

./: .coverage  .gitignore  Cargo.toml  Procfile  README.md  diesel.toml  main.py  pytest.ini  requirements.txt  worker.py
.github/workflows/: ci.yml
app/: __init__.py  app.db  auth.py  house.py  models.py  schedule.py  task.py  test_e2e.py  test_models.py  user_task.py  utils.py
app/templates/: base.jinja  email_verify.jinja  password_email_reset.jinja  password_reset.jinja
data/: Cargo.toml
data/migrations/2020-06-05-062636_initial_models/: up.sql
data/src/: lib.rs  schema.rs
migrations/versions/: 128df5b24b26_.py  33a879a0d3d9_.py  73d2606ed49b_.py  9b5070da5d8f_.py  b6a23ea4f451_.py
tests/: __init__.py
worker/: Cargo.toml
worker/src/: main.rs
