[package]
name = "data"
version = "0.1.0"
authors = ["Teymour Aldridge <teymour.aldridge@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version="1", features=["chrono", "postgres"]}
chrono="0.4"