[package]
name = "worker"
version = "0.1.0"
authors = ["Teymour Aldridge <teymour.aldridge@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version="1", features=["chrono", "r2d2", "postgres"]}
tokio = { version = "0.2", features = ["full"] }
futures="0.3.5"
data  = {path="../data"}
chrono = "0.4"
time="0.2"